--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ main {
 /* End Hero */
 
 /* Drive child */
-.drive {
+.drive__item {
     width: 100%;
     height: 100%;
     display: flex;
@@ -147,25 +147,6 @@ main {
 /* End drive child */
 
 /* Features */
-.drive__features {
+.drive__item:nth-of-type(odd) {
     flex-direction: row-reverse;
-}
-
-.drive__features .drive__item-image img {
-    width: auto;
-}
-
-/* Platform */
-.drive__platform {
-    flex-direction: row;
-}
-
-/* Customers */
-.drive__customers {
-    flex-direction: row-reverse;
-}
-
-/* Statistics */
-.drive__statistics {
-    flex-direction: row;
 }
