--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --color-white: #fff;
     --color-black: #202124;
     --color-gray: #5f6368;
+    --color-gray-hover: rgba(214, 214, 214, 0.5);
     --color-border-white: #dadce0;
     --box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
 }
