--- a/css/main.css
+++ b/css/main.css
@@ -150,13 +150,16 @@ main {
 
 /* Platforms */
 .drive__platform {
+    width: 100%;
+    height: auto;
     background-image: url("https://kstatic.googleusercontent.com/files/c744ed1513f2b6754c51cc8c4630b68f83c552b799ccfac46466452fe03925112ca1c55005808c0fe6927408445b4581de3ef5501ba67cca83de3bbd52a7064d");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    margin: 60px 0;
+    padding: 100px 0 60px 0;
 }
 
 .drive__platform-title {
@@ -193,4 +196,249 @@ main {
 
 .drive__platform-links a:hover {
     background-color: var(--color-gray-hover);
+}
+
+/* Customers */
+.drive__customers {
+    width: 100%;
+    height: auto;
+    background-color: #f8f9fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+    margin-top: 80px;
+}
+
+.drive__customers-title {
+    font-size: 48px;
+    letter-spacing: -0.5px;
+    line-height: 56px;
+    font-weight: 400;
+    text-align: center;
+
+    padding-bottom: 80px;
+    margin: 0 200px;
+}
+
+.drive__customers-sliders {
+    width: 80%;
+    background-color: var(--color-white);
+    box-shadow: 1px 1px 10px rgba(123, 123, 133, 0.2);
+    position: relative;
+}
+
+.drive__customers-sliders-icon {
+    width: 100%;
+    padding: 80px 0 0;
+    display: flex;
+    justify-content: center;
+}
+
+.drive__customers-sliders-heading {
+    padding: 24px 240px;
+}
+
+.drive__customers-sliders-heading h3 {
+    font-size: 28px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.drive__customers-sliders-link {
+    text-align: center;
+    width: 100%;
+    padding-bottom: 80px;
+    font-size: 16px;
+    color: var(--color-primary);
+}
+
+.btn-prev-slider,
+.btn-next-slider {
+    position: absolute;
+
+    transform: translateY(-50%);
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background-color: var(--color-white);
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.drive__customers-btn.btn-next-slider {
+    top: 50%;
+    right: 30px;
+}
+
+.drive__customers-btn.btn-prev-slider {
+    top: 50%;
+    left: 30px;
+}
+
+.btn-next-slider:hover,
+.btn-prev-slider:hover {
+    box-shadow: 2px 2px 10px 2px rgba(141, 141, 141, 0.5);
+}
+
+.material-icons {
+    font-size: 36px;
+}
+
+.drive__customers-icons {
+    width: 70%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Statistics*/
+.drive__statistics {
+    margin: 120px 0;
+    display: flex;
+
+    width: 80%;
+}
+
+.drive__statistics-container {
+    width: 40%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+}
+.drive__statistics-title {
+    font-size: 48px;
+    font-weight: 400;
+    letter-spacing: -0.5px;
+    line-height: 56px;
+}
+
+.drive__statistics-description {
+    margin-top: 20px;
+    font-size: 14px;
+    color: var(--color-gray);
+}
+
+.drive__statistics-charts {
+    width: 60%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.chart-item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 50px;
+}
+
+.chart-item-name {
+    padding-top: 20px;
+    width: 200px;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.chart-item-name a img {
+    width: 100%;
+    max-height: auto;
+}
+
+.chart-item-view {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.view-number.active {
+    color: var(--color-primary);
+    text-align: right;
+    margin-right: 6%;
+}
+
+.view-outer.active {
+    width: 100%;
+    height: 8px;
+
+    border-radius: 4px;
+    background-color: #aecbfa;
+}
+
+.view-inner.active {
+    width: 94%;
+    height: 8px;
+    border-radius: 4px;
+    background-color: #1a73e8;
+}
+
+.view-number {
+    color: rgb(123, 123, 133);
+    text-align: right;
+    margin-right: 20%;
+}
+.view-outer {
+    width: 100%;
+    height: 8px;
+
+    border-radius: 4px;
+    background-color: #dadada;
+}
+
+.view-inner {
+    width: 80%;
+    height: 8px;
+    border-radius: 4px;
+    background-color: #808386;
+}
+
+/* Tools */
+.drive__tools {
+    margin: 120px 0;
+}
+
+.drive__tools-heading {
+    padding: 0 240px 0;
+}
+
+.drive__tools-heading h2 {
+    font-size: 48px;
+    font-weight: 400;
+    letter-spacing: -0.5px;
+    line-height: 56px;
+    text-align: center;
+}
+
+.drive__tools-company {
+    list-style: none;
+    display: flex;
+    margin: 60px 0;
+}
+
+.drive__tools-company li {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    border-radius: 2px;
+    border: 1px solid rgba(221, 221, 221, 0.534);
+}
+
+.drive__tools-company li:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
