--- a/css/main.css
+++ b/css/main.css
@@ -1,444 +1,466 @@
 main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .break-line {
-    width: 100%;
-    height: 1px;
-    background-color: rgba(165, 165, 165, 0.5);
+  width: 100%;
+  height: 1px;
+  background-color: rgba(165, 165, 165, 0.5);
 }
 
 /* Hero */
 .drives {
-    width: 80%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .drive__hero {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
-    margin: 120px 0px 100px 0px;
+  margin: 120px 0px 100px 0px;
 }
 
 .drive__hero-container {
-    width: 35%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 35%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .drive__hero-title {
-    font-weight: 400;
-    font-size: 48px;
-    letter-spacing: -0.5px;
-    line-height: 56px;
-    color: var(--color-black);
-    padding: 0 0 36px 0;
+  font-weight: 400;
+  font-size: 48px;
+  letter-spacing: -0.5px;
+  line-height: 56px;
+  color: var(--color-black);
+  padding: 0 0 36px 0;
 }
 
 .drive__hero-description {
-    font-weight: 400;
-    font-size: 16px;
-    letter-spacing: -0.5px;
-    line-height: 26px;
-    color: var(--color-gray);
-    padding: 0 0 36px 0;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: -0.5px;
+  line-height: 26px;
+  color: var(--color-gray);
+  padding: 0 0 36px 0;
 }
 
 .drive__hero-btn {
-    max-height: 120px;
-    flex-direction: column;
-    align-items: start;
+  max-height: 120px;
+  flex-direction: column;
+  align-items: start;
 }
 .drive__hero-btn a {
-    height: 48px;
-    width: auto;
-    padding: 2px 24px 0;
-    margin: 8px 5px 8px 0;
+  height: 48px;
+  width: auto;
+  padding: 2px 24px 0;
+  margin: 8px 5px 8px 0;
 }
 .drive__hero-image {
-    width: 60%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 60%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .drive__hero-image img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 /* End Hero */
 
 /* Features */
 .drive__item:nth-of-type(odd) {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .drive__item {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
-    margin: 60px 0px;
+  margin: 60px 0px;
 }
 
 .drive__item-container {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .drive__item-icon {
-    width: 70px;
-    height: 70px;
-    margin: 0 0 24px;
+  width: 70px;
+  height: 70px;
+  margin: 0 0 24px;
 }
 
 .drive__item-title {
-    font-size: 36px;
-    letter-spacing: -0.25px;
-    line-height: 44px;
-    font-weight: 400;
+  font-size: 36px;
+  letter-spacing: -0.25px;
+  line-height: 44px;
+  font-weight: 400;
 
-    color: var(--color-black);
+  color: var(--color-black);
 }
 
 .drive__item-description {
-    font-size: 16px;
-    font-family: "Roboto", sans-serif;
-    letter-spacing: -0.25px;
-    line-height: 26px;
-    font-weight: 400;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: -0.25px;
+  line-height: 26px;
+  font-weight: 400;
 
-    color: var(--color-gray);
+  color: var(--color-gray);
 
-    margin: 16px 0 24px;
+  margin: 16px 0 24px;
 }
 
 .drive__item-image {
-    width: 55%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 55%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .drive__item-image img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 /* Platforms */
 .drive__platform {
-    width: 100%;
-    height: auto;
-    background-image: url("https://kstatic.googleusercontent.com/files/c744ed1513f2b6754c51cc8c4630b68f83c552b799ccfac46466452fe03925112ca1c55005808c0fe6927408445b4581de3ef5501ba67cca83de3bbd52a7064d");
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: auto;
+  background-image: url("https://kstatic.googleusercontent.com/files/c744ed1513f2b6754c51cc8c4630b68f83c552b799ccfac46466452fe03925112ca1c55005808c0fe6927408445b4581de3ef5501ba67cca83de3bbd52a7064d");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    padding: 100px 0 60px 0;
+  padding: 100px 0 60px 0;
 }
 
 .drive__platform-title {
-    font-size: 48px;
-    letter-spacing: -0.5px;
-    line-height: 56px;
-    font-weight: 400;
+  font-size: 48px;
+  letter-spacing: -0.5px;
+  line-height: 56px;
+  font-weight: 400;
 
-    margin: 24px 0;
+  margin: 24px 0;
 }
 
 .drive__platform-description {
-    padding: 0 350px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--color-gray);
+  padding: 0 350px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--color-gray);
 }
 
 .drive__platform-icons {
-    margin: 24px 0;
+  margin: 24px 0;
 }
 
 .drive__platform-icons a {
-    margin: 0 12px;
+  margin: 0 12px;
 }
 
 .drive__platform-links a {
-    border-radius: 4px;
-    padding: 0 12px;
-    color: var(--color-primary);
-    cursor: pointer;
+  border-radius: 4px;
+  padding: 0 12px;
+  color: var(--color-primary);
+  cursor: pointer;
 }
 
 .drive__platform-links a:hover {
-    background-color: var(--color-gray-hover);
+  background-color: var(--color-gray-hover);
 }
 
 /* Customers */
 .drive__customers {
-    width: 100%;
-    height: auto;
-    background-color: #f8f9fa;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 80px 0;
-    margin-top: 80px;
+  width: 100%;
+  height: auto;
+  background-color: #f8f9fa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0;
+  margin-top: 80px;
 }
 
 .drive__customers-title {
-    font-size: 48px;
-    letter-spacing: -0.5px;
-    line-height: 56px;
-    font-weight: 400;
-    text-align: center;
+  font-size: 48px;
+  letter-spacing: -0.5px;
+  line-height: 56px;
+  font-weight: 400;
+  text-align: center;
 
-    padding-bottom: 80px;
-    margin: 0 200px;
+  padding-bottom: 80px;
+  margin: 0 200px;
 }
 
 .drive__customers-sliders {
-    width: 80%;
-    background-color: var(--color-white);
-    box-shadow: 1px 1px 10px rgba(123, 123, 133, 0.2);
-    position: relative;
+  overflow: hidden;
+  width: 80%;
+  background-color: var(--color-white);
+  box-shadow: 1px 1px 10px rgba(123, 123, 133, 0.2);
+  position: relative;
 }
-
+.drive__customers-slider-cover {
+  display: flex;
+  user-select: none;
+  transition: all 0.5s ease-in-out;
+}
 .drive__customers-sliders-icon {
-    width: 100%;
-    padding: 80px 0 0;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  padding: 80px 0 0;
+  display: flex;
+  justify-content: center;
 }
 
 .drive__customers-sliders-heading {
-    padding: 24px 240px;
+  padding: 24px 240px;
 }
 
 .drive__customers-sliders-heading h3 {
-    font-size: 28px;
-    font-weight: 400;
-    text-align: center;
+  font-size: 28px;
+  font-weight: 400;
+  text-align: center;
 }
 
 .drive__customers-sliders-link {
-    text-align: center;
-    width: 100%;
-    padding-bottom: 80px;
-    font-size: 16px;
-    color: var(--color-primary);
+  text-align: center;
+  width: 100%;
+  padding-bottom: 80px;
+  font-size: 16px;
+  color: var(--color-primary);
 }
 
 .btn-prev-slider,
 .btn-next-slider {
-    position: absolute;
+  position: absolute;
 
-    transform: translateY(-50%);
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    background-color: var(--color-white);
-    cursor: pointer;
+  transform: translateY(-50%);
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background-color: var(--color-white);
+  cursor: pointer;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .drive__customers-btn.btn-next-slider {
-    top: 50%;
-    right: 30px;
+  top: 50%;
+  right: 30px;
 }
 
 .drive__customers-btn.btn-prev-slider {
-    top: 50%;
-    left: 30px;
+  top: 50%;
+  left: 30px;
+}
+.drive__customers-dot {
+  display: flex;
+  gap: 10px;
+  margin: 50px;
 }
 
+.drive__customers-dot span {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: block;
+  background-color: rgba(255, 255, 255, 0);
+
+  border: 1px solid #202124;
+}
+.drive__customers-dot span.active {
+  background-color: #202124;
+}
 .btn-next-slider:hover,
 .btn-prev-slider:hover {
-    box-shadow: 2px 2px 10px 2px rgba(141, 141, 141, 0.5);
+  box-shadow: 2px 2px 10px 2px rgba(141, 141, 141, 0.5);
 }
 
 .material-icons {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 .drive__customers-icons {
-    width: 70%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 70%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Statistics*/
 .drive__statistics {
-    margin: 120px 0;
-    display: flex;
+  margin: 120px 0;
+  display: flex;
 
-    width: 80%;
+  width: 80%;
 }
 
 .drive__statistics-container {
-    width: 40%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
+  width: 40%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
 }
 .drive__statistics-title {
-    font-size: 48px;
-    font-weight: 400;
-    letter-spacing: -0.5px;
-    line-height: 56px;
+  font-size: 48px;
+  font-weight: 400;
+  letter-spacing: -0.5px;
+  line-height: 56px;
 }
 
 .drive__statistics-description {
-    margin-top: 20px;
-    font-size: 14px;
-    color: var(--color-gray);
+  margin-top: 20px;
+  font-size: 14px;
+  color: var(--color-gray);
 }
 
 .drive__statistics-charts {
-    width: 60%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 60%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .chart-item {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 50px;
 }
 
 .chart-item-name {
-    padding-top: 20px;
-    width: 200px;
-    height: 100%;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    margin-right: 10px;
+  padding-top: 20px;
+  width: 200px;
+  height: 100%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  margin-right: 10px;
 }
 
 .chart-item-name a img {
-    width: 100%;
-    max-height: auto;
+  width: 100%;
+  max-height: auto;
 }
 
 .chart-item-view {
-    width: 100%;
+  width: 100%;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .view-number.active {
-    color: var(--color-primary);
-    text-align: right;
-    margin-right: 6%;
+  color: var(--color-primary);
+  text-align: right;
+  margin-right: 6%;
 }
 
 .view-outer.active {
-    width: 100%;
-    height: 8px;
+  width: 100%;
+  height: 8px;
 
-    border-radius: 4px;
-    background-color: #aecbfa;
+  border-radius: 4px;
+  background-color: #aecbfa;
 }
 
 .view-inner.active {
-    width: 94%;
-    height: 8px;
-    border-radius: 4px;
-    background-color: #1a73e8;
+  width: 94%;
+  height: 8px;
+  border-radius: 4px;
+  background-color: #1a73e8;
 }
 
 .view-number {
-    color: rgb(123, 123, 133);
-    text-align: right;
-    margin-right: 20%;
+  color: rgb(123, 123, 133);
+  text-align: right;
+  margin-right: 20%;
 }
 .view-outer {
-    width: 100%;
-    height: 8px;
+  width: 100%;
+  height: 8px;
 
-    border-radius: 4px;
-    background-color: #dadada;
+  border-radius: 4px;
+  background-color: #dadada;
 }
 
 .view-inner {
-    width: 80%;
-    height: 8px;
-    border-radius: 4px;
-    background-color: #808386;
+  width: 80%;
+  height: 8px;
+  border-radius: 4px;
+  background-color: #808386;
 }
 
 /* Tools */
 .drive__tools {
-    margin: 120px 0;
+  margin: 120px 0;
 }
 
 .drive__tools-heading {
-    padding: 0 240px 0;
+  padding: 0 240px 0;
 }
 
 .drive__tools-heading h2 {
-    font-size: 48px;
-    font-weight: 400;
-    letter-spacing: -0.5px;
-    line-height: 56px;
-    text-align: center;
+  font-size: 48px;
+  font-weight: 400;
+  letter-spacing: -0.5px;
+  line-height: 56px;
+  text-align: center;
 }
 
 .drive__tools-company {
-    list-style: none;
-    display: flex;
-    margin: 60px 0;
+  list-style: none;
+  display: flex;
+  margin: 60px 0;
 }
 
 .drive__tools-company li {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-    border-radius: 2px;
-    border: 1px solid rgba(221, 221, 221, 0.534);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  border-radius: 2px;
+  border: 1px solid rgba(221, 221, 221, 0.534);
 }
 
 .drive__tools-company li:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
