--- a/css/main.css
+++ b/css/main.css
@@ -267,7 +267,7 @@ main {
   width: 64px;
   height: 64px;
   border-radius: 50%;
-  background-color: var(--color-white);
+  background-color: rgba(255, 255, 255, 1);
   cursor: pointer;
 
   display: flex;
@@ -312,7 +312,7 @@ main {
 }
 
 .drive__customers-dot {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .drive__customers-icons {
@@ -324,7 +324,7 @@ main {
 }
 
 .drive__customers-icons img {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
 /* Statistics*/
@@ -465,6 +465,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-left: 20px;
+  margin-bottom: 10px;
   border-radius: 2px;
   border: 1px solid rgba(221, 221, 221, 0.534);
 }
@@ -475,69 +476,69 @@ main {
 
 /* Get Started */
 .get_started {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    margin-bottom: 120px;
+  margin-bottom: 120px;
 }
 
 .get_started__heading h2 {
-    width: 100%;
-    text-align: center;
-    font-size: 48px;
-    font-weight: 400;
-    letter-spacing: -0.5px;
-    line-height: 56px;
+  width: 100%;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 400;
+  letter-spacing: -0.5px;
+  line-height: 56px;
 
-    margin-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .get_started__container {
-    width: 90%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .get_started__box {
-    margin: 0 15px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-    border: 1px solid rgba(190, 190, 190, 0.863);
-    padding: 0 32px 32px 32px;
+  margin: 0 15px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
+  border: 1px solid rgba(190, 190, 190, 0.863);
+  padding: 0 32px 32px 32px;
 }
 
 .box-header {
-    min-height: 80px;
-    padding: 38px 0 0 0;
+  min-height: 80px;
+  padding: 38px 0 0 0;
 }
 
 .box-body-title {
-    margin: 10px 0;
+  margin: 10px 0;
 
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .box-body-description {
-    font-size: 16px;
-    height: 200px;
-    color: var(--color-gray);
+  font-size: 16px;
+  height: 200px;
+  color: var(--color-gray);
 }
 
 .box-link a {
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--color-primary);
-    border-radius: 4px;
-    padding: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--color-primary);
+  border-radius: 4px;
+  padding: 10px;
 }
 
 .box-link a:hover {
-    background-color: #c4d9fa6e;
+  background-color: #c4d9fa6e;
 }
