--- a/css/header.css
+++ b/css/header.css
@@ -60,6 +60,7 @@
   justify-content: start;
   width: 100%;
   min-height: 64px;
+  padding-left: 10px;
 }
 
 .header__link-bar-item {
@@ -73,7 +74,7 @@
   letter-spacing: 0.25px;
 
   color: var(--color-gray);
-  margin: 0px 22px;
+  /* margin: 0px 22px; */
 
   padding: 1px 12px 0;
 
@@ -111,6 +112,7 @@
   padding: 2px 24px 0;
 
   cursor: pointer;
+  text-align: center;
 }
 
 .btn-go {
