--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,41 @@
   box-shadow: var(--box-shadow);
 }
 
+.header__menu {
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__menu-btn {
+  display: none;
+}
+
+.header__menu-btn span {
+  padding: 10px;
+  cursor: pointer;
+
+  font-size: 24px;
+  color: var(--color-gray);
+}
+
+.header__menu-btn span:hover {
+  background-color: rgb(240, 240, 240);
+  border-radius: 50%;
+}
+
+.header__menu-list {
+  /* display: none; */
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 400px;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
+  z-index: 5;
+}
+
 .header__logo {
   display: flex;
   flex-direction: row;
@@ -138,4 +173,50 @@
 
 .btn-try:hover {
   background-color: rgb(9, 90, 197);
+}
+
+.list-1 {
+  padding-top: 30px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.list-1-name {
+  padding-left: 20px;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: var(--color-gray);
+}
+
+.list-1-items li {
+  padding-left: 40px;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: var(--color-gray);
+}
+
+.list-1-name:hover,
+.list-1-items li:hover {
+  background-color: rgb(240, 240, 240);
+  border-radius: 0 25px 25px 0;
+  font-weight: 500;
+  color: var(--color-black);
+}
+
+.header__menu-list .buttons {
+  border-top: 1px solid rgb(209, 208, 208);
+  flex-direction: column-reverse;
+  max-height: 150px;
+  padding: 10px;
+}
+
+.header__menu-list .buttons a {
+  width: 100%;
+  height: 48px;
 }
