--- a/css/animation.css
+++ b/css/animation.css
@@ -13,3 +13,12 @@ html {
 .drive__item.show {
     transform: translateX(0);
 }
+
+.header__menu-list {
+    transition: all 0.3s linear 0s;
+    transform: translateX(-400px);
+}
+
+.header__menu-list.show {
+    transform: translateX(0px);
+}
