--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,9 @@
     h2 {
         font-size: 40px !important;
     }
+    .header__menu-btn {
+        display: block;
+    }
     .drives {
         width: 90%;
     }
@@ -11,6 +14,10 @@
 
     .drive__hero {
         flex-direction: column;
+    }
+
+    .drive__hero-title {
+        font-size: 40px;
     }
 
     .drive__hero-container {
@@ -64,7 +71,7 @@
     }
 
     .drive__customers-sliders-link {
-        padding-bottom: 0;
+        padding-bottom: 40px;
     }
 
     .drive__customers-icons {
@@ -106,5 +113,34 @@
     .get_started__box {
         width: 80%;
         margin: 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    h2 {
+        font-size: 28px !important;
+    }
+    p {
+        font-size: 18px !important;
+    }
+    .buttons {
+        display: none;
+    }
+    .drive__statistics {
+        flex-direction: column;
+    }
+    .drive__statistics-container {
+        width: 100%;
+    }
+    .drive__statistics-description {
+        width: 100%;
+        text-align: center;
+    }
+    .drive__statistics-charts {
+        width: 100%;
+    }
+    .chart-item {
+        flex-direction: column;
+        align-items: end;
     }
 }
