--- a/css/header.css
+++ b/css/header.css
@@ -46,6 +46,7 @@
   height: 100vh;
   background-color: rgb(255, 255, 255);
   z-index: 5;
+  box-shadow: 4px 3px 4px 0 rgba(209, 209, 209, 0.5);
 }
 
 .header__logo {
